@@ -470,9 +470,9 @@ SUB drawmap (BYVAL x, BYVAL y as integer, BYVAL t as integer, BYVAL p as integer
 			todraw = calcblock(xpos, ypos, t)
 			if (todraw >= 160) then
 				if (todraw > 207) then
-					todraw = todraw - 208 + anim2
+					todraw = (todraw - 48 + anim2) MOD 160
 				else
-					todraw = todraw - 160 + anim1
+					todraw = (todraw + anim1) MOD 160
 				end if
 			end if
 
