@@ -115,6 +115,8 @@ WHAT IS NEW?
     * "save map state", "load map state", "reset map state", "delete map state"
       [Ralph Versteegen]
     * "party money", "set money" [Ralph]
+    * "get tile animation offset", "set tile animation offset",
+      "current display tile", "animation start tile" [Ralph Versteegen]
 
   * Unlump.exe
     * Ported to FreeBasic [Mike Caron]
